--- a/app/plantserviceapp/package.json
+++ b/app/plantserviceapp/package.json
@@ -13,22 +13,28 @@
         "build": "npm run clean && ui5 build --include-task=generateManifestBundle generateCachebusterInfo && npm run zip",
         "zip": "cd dist && npx bestzip ../plant_service_fiori_i538951-content.zip *",
         "clean": "npx rimraf plant_service_fiori_i538951-content.zip dist",
-        "karma:ci" : "karma start ./karma-ci.conf.js",
-        "karma" : "karma start"
+        "karma:ci": "karma start ./karma-ci.conf.js",
+        "karma": "karma start"
     },
-    "devDependencies": { 
-    "@sap/ui5-builder-webide-extension": "1.0.x",
-    "@sapui5/ts-types": "1.71.x",
-    "@ui5/cli": "2.2.6",
-    "bestzip": "2.1.4",
-    "karma": "^6.4.1",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-openui5": "^0.2.3",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-qunit": "^4.1.2",
-    "karma-ui5": "^3.0.2",
-    "qunitjs": "^2.4.1",
-    "rimraf": "3.0.2"}
+    "ui5": {
+        "dependencies": [
+            "@sap/ui5-builder-webide-extension"
+        ]
+    },
+    "devDependencies": {
+        "@sap/ui5-builder-webide-extension": "1.0.x",
+        "@sapui5/ts-types": "1.71.x",
+        "@ui5/cli": "2.2.6",
+        "bestzip": "^2.1.4",
+        "karma": "^6.4.1",
+        "karma-chrome-launcher": "^3.1.1",
+        "karma-coverage": "^2.2.0",
+        "karma-junit-reporter": "^2.0.1",
+        "karma-openui5": "^0.2.3",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-qunit": "^4.1.2",
+        "karma-ui5": "^3.0.2",
+        "qunitjs": "^2.4.1",
+        "rimraf": "3.0.2"
+    }
 }
