--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sap/ux-specification": "^1.102.17",
+    "rimraf": "^5.0.0",
     "sqlite3": "^5.0.4"
   },
   "scripts": {
@@ -20,8 +21,8 @@
     "mykarma": "cd app/supplier-management/ && npm install && npm run karma",
     "mykarma:ci": "cd app/supplier-management/ && npm install -g npm@latest && npm install && npm run karma:ci",
     "ci-lint": "eslint . --max-warnings=0",
-    "initlint" : "npm install eslint && npm run ci-lint",
-    "uiveri5" : "npm i @ui5/uiveri5 && uiveri5"
+    "initlint": "npm install eslint && npm run ci-lint",
+    "uiveri5": "npm i @ui5/uiveri5 && uiveri5"
   },
   "cds": {
     "requires": {
